--- a/frontend/resources/styles/styles.css
+++ b/frontend/resources/styles/styles.css
@@ -232,3 +232,8 @@ footer#connect {
     -webkit-transform: translateX(-25px) translateY(-75px);
     transform: translateX(-25px) translateY(-75px);
 }
+
+#footer-links li {
+    margin-left: 8px;
+    margin-right: 8px;
+}
